added InanimateElement + finished class diagram for now